<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.activity.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_intro" />

        <TextView
            android:id="@+id/textLoginHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewLoginHeader"
            android:textColor="@color/colorTextViewColor"
            style="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextViewColor"
            android:text="@string/textViewLoginHeaderDesc"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.AppCompat.Body1"/>

        <EditText
            android:id="@+id/editTextTextLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:background="@drawable/background_edit_text"
            android:hint="Email@hotbook.com"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:layout_marginTop="16dp"
            android:hint="Password"
            android:textSize="16sp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:background="@drawable/background_btn_bg"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/btnLogin" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorTextViewColor"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            style="@style/TextAppearance.AppCompat.Body1"
            android:text="Don't Have an Account? Sign Up" />

    </LinearLayout>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_wave__2_" />
</androidx.constraintlayout.widget.ConstraintLayout>